# goit-pythonweb-hw-06

./: .env_example  .gitignore  Dockerfile  Dockerfile~  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
CLI/: comands.py  handle_commands.py
alembic/: env.py
config/: db.py
db_queries/: seed.py
db_queries/CRUD/: crud_grade.py  crud_group.py  crud_students.py  crud_teachers.py  crud_utils.py
models/: Grade.py  Group.py  Student.py  Subject.py  Teacher.py  __init__.py
queries/: my_select.py  seed.py
queries/CRUD/: gradeController.py  gradeController.py~  groupController.py  groupController.py~  service.py  studentsController.py  subjectController.py  teachersController.py
utils/: clean_all_tables.py  command_help.py  seed_tables.py
